<resources>
    <string name="app_name">Property</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="Property">Property</string>
    <string name="find_your_happy">Find Your Happy</string>
    <string name="search_properties_for_sale_and_to_rent_in_the_uk">Search properties for sale and to rent in the UK</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_an_user">Already have an account?</string>
    <string name="sign_in_instead">Sign in</string>
    <string name="new_here">New here?</string>
    <string name="remember_me">Remember Me?</string>
    <string name="sign_out">Sign Out</string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="discover_all_properties">Discover all properties avaiable for sale or rent on our site.</string>
    <string name="see_the_latest_prices">See the latest prices that properties actually sold for. Search by postcode, area and even street.</string>
    <string name="kim_and_maria_took_a"><![CDATA[Kim and Maria took a leap of faith and started a B&B in a castle near Glasgow.]]></string>
    <string name="we_bought_a_scottish_castle">We bought a Scottish castle</string>
    <string name="moving_stories">Moving stories</string>
    <string name="explore_sold_prices">Explore sold prices</string>
    <string name="featured_content">Featured content</string>
    <string name="image_not_found">Image Not Found</string>
    <string name="map_search">Map search</string>
    <string name="property_maps">Property maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="include_under_offer_sold_stc">Include Under Offer,Sold STC... ?</string>
    <string name="find_properties">Find Properties</string>
    <string name="no_properties_found">No properties found</string>
    <string name="a_handsome_bay_fronted_exterior_of_painted_brickwork">A handsome bay fronted exterior of painted brickwork contrasts beautifully with its smart slate driveway delivering plenty of kerb appeal.\n\n A neat hallway draws you in with the spacious living room on your right. Light pours in from its bay window, stylish wooden shutters offering homely privacy as you curl up in front of the handsome fireplace.\n\n At the end of the hallway the dining room, conveniently placed next to the kitchen, is a welcoming space with warm wooden effect flooring and a large window bringing in lots of natural light. There is plenty of space for a dining table and chairs and an opening in the chimney breast adds character to the room.\n\n Behind the streamlined kitchen is flawlessly styled. Glossy white cabinetry provides ample storage space whilst housing integrated Neff appliances. A rear window cleverly placed above the sink brings views of the garden in while a side door gives access to the garden beyond.\n\n To the rear of the dining room steps lead down to useful storage cupboards, one with electricity and large enough to house appliances, and a cloakroom.\n\n Beyond is the bright and spacious third bedroom which, as a large double, could easily be used as an additional spacious reception room instead.\n\n At the top of the central carpeted stairs a split landing takes you into bedroom one at the front. It is a generous double bedroom with a fitted wardrobe and its pretty lilac walls and plantation shutters give it a tranquil feeling.\n\n Across the landing bedroom 2 with access into the loft above and a cupboard over the stairs is also a good sized room.\n\n A large stylish and contemporary bathroom with high quality finish completes the floor. Outside to the rear is a pretty enclosed garden with plenty of space for the kids to play and a decked terrace, perfect for relaxing in the summer months. It also benefits from front street access and a large wooden shed for storage.\n\n This beautifully decorated home is ready to move straight in and enjoy while being only a short distance from local shops, sought after schools and excellent transport links into London. A must see! Entrance door with opaque glazed top light window over, which opens to: Entrance hallway with side aspect double glazed window, wooden flooring, radiator and doors opening into:\n\n Living room: 14`1 x 11`11 front aspect double glazed bay window with fitted tier on tier plantation shutters, wooden flooring, open fire with granite hearth and period surround and mantle and radiator.\n\n Returning to hallway, steps down into:\n\n Dining room: 14`11 x 11`11 side aspect double glazed window, wooden effect laminate flooring, radiator and opening into:\n\n Kitchen: 14`11 x 7`8 rear aspect double glazed window, part opaque glazed side aspect door leading into garden, range of white eye and base level units partially glazed with open shelving and wine rack, 1 ¼ stainless steel sink with mixer tap over and drainer, counter tops and space and plumbing for washing machine, space for fridge/freezer, integrated Neff electric oven in tall housing unit, integrated Neff 5 ring gas hob with Belling stainless steel extractor fan, tiled splash back, wooden effect laminate flooring and radiator.\n\n Stairs down to lower ground floor with wooden effect laminate flooring, fitted storage cupboard housing meters and fuse box and fitted wall cupboard with shelving and doors opening into:\n\n Utility Cupboard: with shelf unit and electricity for appliances. \n\nCloakroom: low level WC, wall mounted wash hand basin with mixer tap over, tile effect laminate flooring, and extractor fan.\n\n Bedroom 3: 11` x 10` front aspect double glazed window opening into lightwell, wooden effect laminate flooring and radiator. Stairs up to first floor with split landing and doors into:\n\n Bedroom 1: 12`10 x 11`11 front aspect double glazed window with fitted plantation shutters, deep fitted wardrobe with hanging rail and shelf and radiator.\n\n Bedroom 2: 10`11 x 8`6 rear aspect double glazed window, fitted over stairs cupboard with hanging rail and shelf, ceiling loft access hatch and radiator.\n\n Bathroom: rear aspect opaque window, panel enclosed bath, low level WC, corner shower cubicle with wall mounted shower with rainwater shower head, vanity unit with wash hand basin with mixer tap over and cupboard under, airing cupboard housing the water cylinder with shelving for linen, heated towel rail, tile effect laminate flooring and extractor fan.\n\n Outside: The house is set back from the road behind a low brick wall with a sleeper enclosed raised bed behind with decorative plum coloured slate chippings which stretch out across the driveway to the left side which is open to the road. The rear garden is accessed via a side wooden gate with space for bins behind and a paved pathway with side access into the kitchen. An area of gravel sits behind the kitchen and paved steps enclosed by iron railings lead down to a further graveled area. A paved pathway leads down with two sleeper enclosed beds either side one with mature plants and one with artificial grass. At the rear is a wooden shed and a decked terrace perfect for garden furniture. There is close boarded fencing on the right and rear perimeters with high mature hedging to the left perimeter. A wooden access gate sits on the right perimeter for neighbour street access for bins.\n\n General:\n\n Tenure: Freehold\n Local\n authority: Tunbridge Wells Borough Council \nCouncil tax: Band C (£1,519.00) \nEPC: F (30) \n\nArea Information: Southborough\n\nSouthborough lies just a couple of miles north outside the historic spa town of Tunbridge Wells with its big retail names and its Georgian colonnade, the Pantiles, offering a vibrant café culture. It also sits just south of Tonbridge, with the A26 passing through it offering easy access to the A21 which leads to the M25. Southborough Common, situated towards Springfield Road`s end of the village, is a conservation area where cricket has been played for more than 200 years.\n\n If you`re a runner, dog owner or casual walker, the woodland area of the Southborough Common, nestled behind St. Peters Church, is a very beautiful space. Ancient and young trees slope down to a stream with access to Holden Pond and Bidborough and Speldhurst villages beyond.\n\n Excellent secondary, independent, preparatory and private schools can be found in both Tunbridge Wells and Tonbridge, while Southborough and Bidborough have their very own primary schools. Springfield Road is also within the catchment areas for the 5 highly regarded and sought after Tunbridge Wells and Tonbridge Grammar Schools. \n\nThe nearest mainline station to Southborough is at High Brooms, about a mile away, with fast and frequent train services to London Charing Cross. There are also mainline stations on the same line at Tonbridge and Tunbridge Wells. Tonbridge Station is just over 2 miles away and with two lines passing through, it provides on average 34 trains a day from Tonbridge to London Bridge in as little as 35 minute journeys. If that isn`t enough, you can fall out of your door in the morning onto a luxury coach service straight to Canary Wharf, the City, Embankment and other central London destinations at half the cost of rail travel enabling you to slumber or work using its Wi-Fi connectivity as you travel.</string>
    <string name="_3_bedrooms_semi_detached_house_for_sale">3 bedrooms semi detached house for sale</string>
    <string name="springfield_road_southborough">Springfield Road, Southborough</string>
    <string name="guide_price">Guide Price</string>
    <string name="_400_000">£400,000</string>
    <string name="description">Description:</string>
    <string name="key_features">Key Features:</string>
    <string name="living_room_nstylish_kitchen_nloft_space_ngarden_ndining_room">Living Room Stylish Kitchen Loft Space Garden Dining Room</string>
    <string name="full_description">Full Description:</string>
    <string name="tenure">Tenure:</string>
    <string name="freehold">Freehold</string>

</resources>
