<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/Property"
        android:textColor="@color/splashLightBlack"
        android:fontFamily="cursive"
        android:alpha="0"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/app_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/find_your_happy"
        android:textColor="@color/splashLightBlack"
        android:alpha="0"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/app_sub_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/search_properties_for_sale_and_to_rent_in_the_uk"
        android:textColor="@color/splashLightBlack"
        android:alpha="0"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_below="@id/app_detail"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="48dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/splashLightBlack"
        android:indeterminateTintMode="multiply"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>