<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    tools:context=".SigninActivity">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp">


        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardBg"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:inputType="textEmailAddress"
                    app:met_floatingLabelText="Email"
                    app:met_helperText="Enter your Email"
                    style="@style/editTextStyle" />


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_margin="16dp"
                    android:layout_below="@id/editTextEmail"
                    android:textColor="@color/colorPrimaryDark"
                    app:met_floatingLabelText="Password"
                    app:met_helperText="Enter your Password"
                    style="@style/editTextStyle" />

                <Button
                    android:id="@+id/buttonSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="16dp"
                    android:text="@string/sign_in"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorAccent"
                    android:layout_below="@id/editTextPassword"
                    android:textSize="20sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <com.rey.material.widget.TextView
            android:id="@+id/new_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:text="@string/new_here" />

        <com.rey.material.widget.TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/new_here"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:padding="4dp"
            android:textAlignment="center"
            android:text="@string/create_an_account"
            android:onClick="openSignin"/>


    </RelativeLayout>

</ScrollView>